Aligned cards correctly

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -16,7 +16,7 @@
 }
 
 body, html {
-  height: 100vh;
+ height: 100vh;
 }
 
 .logo {
@@ -124,7 +124,6 @@ body, html {
 
 .section1-cards {
   display: flex;
-  align-items: center;
   justify-content: center;
   flex-wrap: wrap;
   gap: 3rem;
@@ -135,7 +134,6 @@ body, html {
 .card {
   flex: 1;
   text-align: center;
-  height: 30vh;
 }
 
 .section2 {
